# rustcli

./: .env.example  .gitignore  BUGFIX_REPORT.md  Cargo.toml  README.md  SECURITY.md  install.sh
docs/: TUI_PROMPT_BOX_SPEC.md  neon_tui_preview.html
examples/: config.toml  mcp.toml
prompts/: system_prompt.md
src/: cli.rs  config.rs  main.rs  mcp.rs  memory.rs  model_catalog.rs  tui.rs
src/agent/: mod.rs  roles.rs  tool_protocol.rs
src/llm/: anthropic.rs  gemini.rs  mod.rs  ollama.rs  openai.rs
src/terminal/: markdown.rs  mod.rs  suggestions.rs
src/tools/: file.rs  git.rs  mod.rs  parser.rs  project.rs  search.rs  shell.rs
